# Turtlebot

./: README.md
.cache/clangd/index/: birdeye.cpp.8A56A1CFFADB265A.idx
src/birdeye/: CMakeLists.txt  package.xml
src/birdeye/src/: birdeye.cpp
src/fisheye_rectify/: package.xml  setup.cfg  setup.py
src/fisheye_rectify/fisheye_rectify/: birdseye_node.py  click_points.py  fisheye_rectify_node.py
src/odometrie_pkg/: package.xml  setup.cfg  setup.py
src/odometrie_pkg/odometrie_pkg/: odom.py  odometrie_node.py
src/raceturtle/: package.xml  setup.cfg  setup.py
src/raceturtle/calibration_data_backup/: calibration_autsys.yaml  calibration_autsys_zoomed_out.yaml
src/raceturtle/launch/: img_rectifier.launch.py
src/raceturtle/raceturtle/: birdseye_view.py  birdseye_view_live.py
